--- a/matieres_sections.html
+++ b/matieres_sections.html
@@ -7,88 +7,136 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fiches de renseignements Eleve</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 </head>
 
 <body>
   <main id="vueapp" class="container">
-    <article>
+    <article v-if="mode == 'list'">
       <h2>Liste des matières</h2>
       <div v-for="ns, idxNS in mat_sect.niv_sec">
         <h3>Niveau : {{ns}}</h3>
 
-        <div>
-          <div v-for="ms, idxMS in mat_sect.mat_sec[idxNS]" class="row">
+        <div class="row">
+          <div v-for="ms, idxMS in mat_sect.mat_sec[idxNS]" class="col-sm-12 col-md-6 col-lg-4 row">
             <div class="col-10">
-              <span class="badge" v-bind:class="{'bg-danger': ms.categorie == 'PR', 'bg-success': ms.categorie == 'OB', 'bg-secondary': ms.categorie == 'OP'}">{{ms.categorie}}</span>
-              <a href="#" v-on:click.prevent="onSelectItem(idxNS, idxMS)">{{ms.matiere}}</a>
+              <a href="#" v-on:click.prevent="onSelectItem(idxNS, idxMS)" title="Modifier"><i
+                  class="fas fa-pencil-alt"></i></a>
+              <a href="#" v-on:click.prevent="onDeleteItem(idxNS, idxMS)" title="Supprimer"><i
+                  class="fas fa-trash-alt"></i></a>
+              <span class="badge" v-bind:class="getClassBadge(ms)">{{ms.categorie}}</span>
+              {{ms.matiere}}
             </div>
-            <div class="col-2">{{ms.coef.toFixed(1)}}</div>
+            <div class="col-2 text-end">{{ms.coef.toFixed(1)}}</div>
           </div>
         </div>
       </div>
 
       <div class="my-2">
-        <button class="btn btn-success" v-on:click="onNewItem()">⊞ Nouveau</button>
+        <button class="btn btn-success" v-on:click="onNewItem()"><i class="fas fa-plus-circle"></i> Nouveau</button>
       </div>
     </article>
 
-    <article v-if="mode == 'edit' || mode == 'new'">
-      <h2>{{(mode == 'edit') ? 'Modification' : 'Nouvelle'}} Matière</h2>
+    <article v-if="mode == 'edit' || mode == 'new' || mode == 'delete'">
+      <div v-if="mode == 'edit'" class="my-2 card">
+        <div class="card-body">
+          <h3 class="card-title">Ancienne Matière</h3>
+          <h4 class="card-subtitle mb-2 text-muted">Niveau : {{getNiveau(selectedNiveauIndex)}}</h4>
+          <div class="card-text row">
+            <div class="col-sm-12 col-md-6 col-lg-4 row">
+              <div class="col-8">
+                <span class="badge"
+                  v-bind:class="getClassBadge(getMatiere(selectedNiveauIndex, selectedMatiereIndex))">{{getMatiere(selectedNiveauIndex,
+                  selectedMatiereIndex).categorie}}</span>
+                {{getMatiere(selectedNiveauIndex, selectedMatiereIndex).matiere}}
+              </div>
+              <div class="col-4 text-end">{{getMatiere(selectedNiveauIndex, selectedMatiereIndex).coef.toFixed(1)}}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div v-if="errors.length > 0" class="text-danger my-2">
         <h3>Erreurs</h3>
         <ul>
           <li v-for="error in errors">{{error}}</li>
         </ul>
-      </div>      
-      <form>
-        <div class="mb-1 row">
-          <div class="col-4">
-            <label for="inpNiveau" class="form-label">Niveau</label>
-            <input type="number" min="1" max="4" id="inpNiveau" class="form-control"
-              v-model.number="selectedItem.niveau">
-          </div>
+      </div>
 
-          <div class="col-8">
-            <label for="inpSection" class="form-label">Section</label>
-            <select id="inpSection" class="form-select form-select-md" v-model="selectedItem.id_section">
-              <option selected>-</option>
-              <option v-for="section in sections" v-bind:value="section.id">{{section.section}}
-                ({{section.section_court}})</option>
-            </select>
-          </div>
+      <div class="my-2 card">
+        <div class="card-body">
+          <form>
+            <h3 class="card-title">{{mode != 'delete' ? 'Nouvelle Matière' : 'Suppression Matière'}}</h3>
+            <div class="mb-1 row">
+              <div class="col-md-4">
+                <label for="inpNiveau" class="form-label">Niveau</label>
+                <input type="number" min="1" max="4" id="inpNiveau" class="form-control"
+                  v-model.number="selectedItem.niveau" v-bind:readonly="mode == 'delete'">
+              </div>
+
+              <div class="col-md-8">
+                <label for="inpSection" class="form-label">Section</label>
+                <select id="inpSection" class="form-select form-select-md" v-if="mode != 'delete'"
+                  v-model="selectedItem.id_section">
+                  <option selected>-</option>
+                  <option v-for="section in sections" v-bind:value="section.id">{{section.section}}
+                    ({{section.section_court}})</option>
+                </select>
+                <input type="text" id="inpSection" class="form-control" v-model="selectedItem.section"
+                  v-if="mode == 'delete'" v-bind:readonly="mode == 'delete'">
+              </div>
+            </div>
+
+            <div class="mb-1 row">
+              <div class="col-md-8">
+                <label for="inpMatiere" class="form-label">Matiere</label>
+                <select id="inpMatiere" class="form-select form-select-md" v-if="mode != 'delete'"
+                  v-model="selectedItem.id_matiere">
+                  <option selected>-</option>
+                  <option v-for="matiere in matieres" v-bind:value="matiere.id">{{matiere.matiere}}</option>
+                </select>
+                <input type="text" id="inpMatiere" class="form-control" v-model="selectedItem.matiere"
+                  v-if="mode == 'delete'" v-bind:readonly="mode == 'delete'">
+              </div>
+
+              <div class="col-md-4">
+                <label for="inpCoef" class="form-label">Coefficient</label>
+                <input type="number" min="0.25" max="4.0" step="0.25" id="inpCoef" class="form-control"
+                  v-model.number="selectedItem.coef" v-bind:readonly="mode == 'delete'">
+              </div>
+            </div>
+
+            <div class="mb-1">
+              <input type="radio" id="inpCategoriePrinipale" name="categorie" value="PR"
+                v-model="selectedItem.categorie" v-bind:disabled="mode == 'delete'">
+              <label for="inpCategoriePrinipale" class="form-label">Principale</label>
+
+              <input type="radio" id="inpCategorieObligatoire" name="categorie" value="OB"
+                v-model="selectedItem.categorie" v-bind:disabled="mode == 'delete'">
+              <label for="inpCategorieObligatoire" class="form-label">Obligatoire</label>
+
+              <input type="radio" id="inpCategorieOption" name="categorie" value="OP" v-model="selectedItem.categorie"
+                v-bind:disabled="mode == 'delete'">
+              <label for="inpCategorieOption" class="form-label">Option</label>
+            </div>
+          </form>
         </div>
+      </div>
 
-        <div class="mb-1 row">
-          <div class="col-8">
-            <label for="inpMatiere" class="form-label">Matiere</label>
-            <select id="inpMatiere" class="form-select form-select-md" v-model="selectedItem.id_matiere">
-              <option selected>-</option>
-              <option v-for="matiere in matieres" v-bind:value="matiere.id">{{matiere.matiere}}</option>
-            </select>
-          </div>
-          <div class="col-4">
-            <label for="inpCoef" class="form-label">Coefficient</label>
-            <input type="number" min="0.25" max="4.0" step="0.25" id="inpCoef" class="form-control"
-              v-model.number="selectedItem.coef">
-          </div>
-        </div>
+      <div v-if="mode == 'delete'" class="my-2">
+        Etes-vous sûr de vouloir supprimer cette matière ?
+      </div>
 
-        <div class="mb-1">
-          <input type="radio" id="inpCategoriePrinipale" name="categorie" value="PR" v-model="selectedItem.categorie">
-          <label for="inpCategoriePrinipale" class="form-label">Principale</label>
+      <div v-if="mode != 'delete'" class="mb-1">
+        <button v-on:click.prevent="onSaveClicked()" class="btn btn-primary">Enregistrer</button>
+        <button v-on:click.prevent="onCancelClicked()" class="btn btn-secondary">Annuler</button>
+      </div>
 
-          <input type="radio" id="inpCategorieObligatoire" name="categorie" value="OB" v-model="selectedItem.categorie">
-          <label for="inpCategorieObligatoire" class="form-label">Obligatoire</label>
-
-          <input type="radio" id="inpCategorieOption" name="categorie" value="OP" v-model="selectedItem.categorie">
-          <label for="inpCategorieOption" class="form-label">Option</label>
-        </div>
-
-        <div class="mb-1">
-          <button v-on:click.prevent="onSaveClicked()" class="btn btn-primary">Enregistrer</button>
-          <button v-on:click.prevent="onCancelClicked()" class="btn btn-secondary">Annuler</button>
-        </div>
-      </form>
+      <div v-if="mode == 'delete'" class="mb-1">
+        <button v-on:click.prevent="onCancelClicked()" class="btn btn-secondary">Annuler</button>
+        <button v-on:click.prevent="onSaveClicked()" class="btn btn-danger">Supprimer</button>
+      </div>
     </article>
   </main>
   <script src="assets/js/bootstrap.bundle.js"></script>
