--- a/matieres_sections.html
+++ b/matieres_sections.html
@@ -13,36 +13,52 @@
 <body>
   <main id="vueapp" class="container">
     <article v-if="alerts.length > 0">
-      <div class="my-2 alert d-flex align-items-center" v-bind:class="'alert-' + alert.alType" role="alert" v-for="alert in alerts">
+      <div class="my-2 alert d-flex align-items-center" v-bind:class="'alert-' + alert.alType" role="alert"
+        v-for="alert in alerts">
         <i class="fas fa-check me-2"></i>
         <div>{{alert.alMsg}}</div>
       </div>
     </article>
 
     <article v-if="mode == 'list'">
-      <h2>Liste des matières</h2>
-      <div v-for="ns, idxNS in mat_sect.niv_sec">
-        <h3>Niveau : {{ns}} 
-          <a href="#" v-on:click.prevent="onNewItem(idxNS)"><i class="fas fa-plus-circle"></i></a>
-        </h3>
+      <div class="my-2">
+        <label for="inpNiveauIndex">Niveau</label>
+        <select class="form-select form-select-md" id="inpNiveauIndex" aria-labelledby="inpNiveauIndexHelp"
+          v-on:change="onSelectNiveau($event)">
+          <option value="-1">-</option>
+          <option v-for="niveau, index in mat_sect.niv_sec" v-bind:value="index" v-bind:selected="idxNiveau == index">
+            {{niveau}}</option>
+        </select>
+        <div id="inpNiveauIndexHelp" class="form-text">Sélectionner un niveau pour voir ses matières.</div>
+      </div>
+    </article>
 
-        <div class="row">
-          <div v-for="ms, idxMS in mat_sect.mat_sec[idxNS]" class="col-sm-12 col-md-6 col-lg-4 row">
-            <div class="col-10">
-              <a href="#" v-on:click.prevent="onSelectItem(idxNS, idxMS)" title="Modifier"><i
-                  class="fas fa-pencil-alt"></i></a>
-              <a href="#" v-on:click.prevent="onDeleteItem(idxNS, idxMS)" title="Supprimer"><i
-                  class="fas fa-trash-alt"></i></a>
-              <span class="badge" v-bind:class="getClassBadge(ms)">{{ms.categorie}}</span>
-              {{ms.matiere}}
-            </div>
-            <div class="col-2 text-end">{{ms.coef.toFixed(1)}}</div>
+    <article v-if="mode == 'list' && idxNiveau != -1">
+      <h2>Liste des matières</h2>
+      <!--<div v-for="ns, idxNS in mat_sect.niv_sec"> -->
+      <h3>Niveau : {{getNiveau(idxNiveau)}}</h3>
+
+      <div class="row">
+        <div v-for="ms, idxMS in mat_sect.mat_sec[idxNiveau]" class="col-sm-12 col-md-6 col-lg-4 row">
+          <div class="col-10">
+            <a href="#" v-on:click.prevent="onSelectItem(idxNiveau, idxMS)" title="Modifier"><i
+                class="fas fa-pencil-alt"></i></a>
+            <a href="#" v-on:click.prevent="onDeleteItem(idxNiveau, idxMS)" title="Supprimer"><i
+                class="fas fa-trash-alt"></i></a>
+            <span class="badge" v-bind:class="getClassBadge(ms)">{{ms.categorie}}</span>
+            {{ms.matiere}}
           </div>
+          <div class="col-2 text-end">{{ms.coef.toFixed(1)}}</div>
         </div>
       </div>
+      <!-- </div> -->
+    </article>
 
+    <article v-if="mode == 'list'">
       <div class="my-2">
-        <button class="btn btn-success" v-on:click="onNewItem()"><i class="fas fa-plus-circle"></i> Nouveau</button>
+        <button v-if="idxNiveau != -1" class="btn btn-secondary" v-on:click="onNewItem(idxNiveau)" title="Nouvelle Matière"><i class="fas fa-plus-circle"></i>
+          Matière</button>
+        <button class="btn btn-success" v-on:click="onNewItem()" title="Nouvelle Section"><i class="fas fa-plus-circle"></i> Niveau</button>
       </div>
     </article>
 
@@ -139,6 +155,10 @@
         <button v-on:click.prevent="onCancelClicked()" class="btn btn-secondary">Annuler</button>
         <button v-on:click.prevent="onSaveClicked()" class="btn btn-danger">Supprimer</button>
       </div>
+    </article>
+
+    <article v-if="mode == 'duplicate'">
+      
     </article>
   </main>
   <script src="assets/js/bootstrap.bundle.js"></script>
