--- a/matieres_sections.html
+++ b/matieres_sections.html
@@ -39,7 +39,7 @@
       <h3>Niveau : {{getNiveau(idxNiveau)}}</h3>
 
       <div class="row">
-        <div v-for="ms, idxMS in mat_sect.mat_sec[idxNiveau]" class="col-sm-12 col-md-6 col-lg-4 row">
+        <div v-for="ms, idxMS in mat_sect.mat_sec[idxNiveau]" class="col-sm-12 col-lg-6 row">
           <div class="col-10">
             <a href="#" v-on:click.prevent="onSelectItem(idxNiveau, idxMS)" title="Modifier"><i
                 class="fas fa-pencil-alt"></i></a>
@@ -58,6 +58,7 @@
       <div class="my-2">
         <button v-if="idxNiveau != -1" class="btn btn-secondary" v-on:click="onNewItem(idxNiveau)" title="Nouvelle Matière"><i class="fas fa-plus-circle"></i>
           Matière</button>
+        <button v-if="idxNiveau != -1" class="btn btn-secondary" v-on:click="onDuplicateNiveau(idxNiveau)"><i class="fas fa-copy"></i> Dupliquer</button>
         <button class="btn btn-success" v-on:click="onNewItem()" title="Nouvelle Section"><i class="fas fa-plus-circle"></i> Niveau</button>
       </div>
     </article>
@@ -158,7 +159,65 @@
     </article>
 
     <article v-if="mode == 'duplicate'">
-      
+      <div class="my-2 card">
+        <div class="card-body">
+          <form>
+            <h3 class="card-title">Nouvelle Section</h3>
+            <div class="mb-1 row">
+              <div class="col-md-4">
+                <label for="inpNiveau" class="form-label">Niveau</label>
+                <input type="number" min="1" max="4" id="inpNiveau" class="form-control"
+                  v-model.number="dupItems[0].niveau">
+              </div>
+
+              <div class="col-md-8">
+                <label for="inpSection" class="form-label">Section</label>
+                <select id="inpSection" class="form-select form-select-md" v-model="dupItems[0].id_section">
+                  <option selected>-</option>
+                  <option v-for="section in sections" v-bind:value="section.id">{{section.section}}
+                    ({{section.section_court}})</option>
+                </select>
+              </div>
+            </div>
+
+            <div>
+              <label>Matières</label>
+            </div>
+
+            <div class="mb-1 row" v-for="item, idxItem in dupItems">
+              <div class="my-1 col-12 col-sm-5 col-lg-6">
+                <select id="inpMatiere" class="form-select form-select-sm" v-model="item.id_matiere">
+                  <option selected>-</option>
+                  <option v-for="matiere in matieres" v-bind:value="matiere.id">{{matiere.matiere}}</option>
+                </select>
+              </div>
+              <div class="my-1 col-6 col-sm-3 col-lg-2">
+                <input type="number" min="0.25" max="4.0" step="0.25" id="inpCoef" class="form-control form-control-sm" v-model.number="item.coef">
+              </div>
+              <div class="my-1 col-4 col-sm-3 col-lg-3">
+                <select id="inpCategorie" class="form-select form-select-sm" v-model="item.categorie">
+                  <option value="PR">PR</option>
+                  <option value="OB">OB</option>
+                  <option value="OP">OP</option>
+                </select>
+              </div>
+              <div class="my-1 col-2 col-sm-1 col-lg-1">
+                <a href="#" v-on:click.prevent="onDeleteMatiere(idxItem)" title="Supprimer"><i
+                  class="fas fa-trash-alt"></i></a>
+              </div>
+            </div>
+
+            <div class="mb-1">
+              <button class="btn btn-primary" v-on:click.prevent="onAddMatiere()"><i class="fas fa-plus-circle"></i> Matière</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class="mb-1">
+        <button v-on:click.prevent="onSaveDupClicked()" class="btn btn-primary">Enregistrer</button>
+        <button v-on:click.prevent="onCancelDupClicked()" class="btn btn-secondary">Annuler</button>
+      </div>
     </article>
   </main>
   <script src="assets/js/bootstrap.bundle.js"></script>
