--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <main id="vueapp" class="container">
     <a href="matieres_sections.html">Matières</a>
     <a href="fiche_renseignements.html">Fiche de renseignements</a>
+    <a href="calcul_moyenne.html">Calcul de Moyenne</a>
   </main>
   <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
