--- a/calcul_moyenne.html
+++ b/calcul_moyenne.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calcul Moyenne</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 </head>
 
 <body>
   <main class="container" id="vueapp">
-    <h1>Calcul de Moyenne</h1>
+    <h1>Calcul de Moyenne Générale Trimestre</h1>
 
     <article>
       <div class="my-2">
@@ -27,15 +28,37 @@
     </article>
 
     <article v-if="idxNiveau != -1">
+      <div class="my-1 row">
+        <div class="col-6 col-md-8">&nbsp;</div>
+        <div class="col-3 col-md-2">
+          <button class="w-100 btn btn-dark" title="Modifier les coefficients" v-if="editMode != 'coef'" v-on:click="onSelectEditMode('coef')"><i class="fas fa-pencil-alt"></i> Coef</button>
+        </div>
+        <div class="col-3 col-md-2">
+          <button class="w-100 btn btn-dark" title="Modifier les notes" v-if="editMode != 'note'" v-on:click="onSelectEditMode('note')"><i class="fas fa-pencil-alt"></i> Note</button>
+        </div>
+      </div>
       <div v-for="ms, idxMS in mat_sect.mat_sec[idxNiveau]" class="my-1 row">
-        <div class="col-5 col-md-8">{{ms.matiere}}</div>
-        <div class="col-1 col-md-1 text-end">{{ms.coef}}</div>
-        <div class="col-4 col-md-2"><input type="number" min="0" max="20" step="0.01" class="form-control form-control-sm text-end" v-model.number="notes[idxMS]"></div>
-        <div class="col-2 col-md-1 text-end">{{(notes[idxMS] * ms.coef).toFixed(2)}}</div>
+        <div class="col-6 col-md-8">{{ms.matiere}}</div>
+        <div class="col-3 col-md-2">
+          <div v-if="editMode != 'coef'" class="text-end">{{ms.coef}}</div>
+          <input type="number" min="0" max="20" step="0.25" class="form-control form-control-sm text-end" v-if="editMode == 'coef'" v-on:blur="onBlurCoef(idxMS)" v-model.number="ms.coef">
+        </div>
+        <div class="col-3 col-md-2">
+          <div v-if="editMode != 'note'" class="text-end">{{notes[idxMS]}}</div>
+          <input type="number" min="0" max="20" step="0.25" class="form-control form-control-sm text-end" v-if="editMode == 'note'" v-on:blur="onBlurNote(idxMS)" v-model.number="notes[idxMS]">
+        </div>
       </div>
       <div class="my-1 row">
         <div class="col-8 col-md-10">Somme</div>
         <div class="col-4 col-md-2 text-end">{{total}}</div>
+      </div>
+      <div class="my-1 row">
+        <div class="col-8 col-md-10">Somme Coef</div>
+        <div class="col-4 col-md-2 text-end">{{totalCoef}}</div>
+      </div>
+      <div class="my-1 row">
+        <div class="col-8 col-md-10">Moyenne</div>
+        <div class="col-4 col-md-2 text-end">{{totalMoy.toFixed(2)}}</div>
       </div>
     </article>
 
