--- a/login.html
+++ b/login.html
@@ -15,23 +15,32 @@
 
     <div class="d-flex vh-100 justify-content-center align-items-center" v-if="mode == 'login'">
       <div class="col-11 col-sm-9 col-md-7 col-lg-5">
+
+        <article v-if="alerts.length > 0">
+          <div class="my-2 alert d-flex align-items-center" v-bind:class="'alert-' + alert.alType" role="alert"
+            v-for="alert in alerts">
+            <i class="fas fa-check me-2"></i>
+            <div>{{alert.alMsg}}</div>
+          </div>
+        </article>
+        
         <div class="card">
           <div class="card-body">
             <h2 class="card-title text-center my-3">Login</h2>
             <form autocomplete="off">
               <div class="my-2 input-group">
                 <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
-                <input type="text" class="form-control" name="pseudo" placeholder="Pseudo-nom">
+                <input type="text" class="form-control" id="loginPseudo" name="pseudo" placeholder="Pseudo-nom">
               </div>
 
               <div class="my-2 input-group">
                 <span class="input-group-text"><i class="fas fa-key"></i></span>
-                <input type="password" class="form-control" name="pass" placeholder="Mot de passe"
+                <input type="password" class="form-control" id="loginPass" name="pass" placeholder="Mot de passe"
                   autocomplete="new-password">
               </div>
 
               <div class="text-center">
-                <button class="w-75 btn btn-primary">Login</button>
+                <button class="w-75 btn btn-primary" v-on:click.prevent="onLoginUser()">Login</button>
               </div>
             </form>
 
